[package]
name = "mclib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
once_cell = "1.18.0"
md5 = "0.7.0"
num = "0.4.1"
enum_dispatch = "0.3.12"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#debug = true
panic = "abort"
strip = true
incremental = false
debug = false
codegen-units = 1
